# reglito

./: .credo.exs  .gitignore  CNAME  Cargo.toml  Dockerfile  README.MD  README.md  chapter_descriptions.json  chapters_data.json  chapters_description.json  data-examples.json  db_example.json  docker-compose.yml  fly.toml  mix.exs
assets/: tailwind.config.js
assets/js/: app.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
entity/: Cargo.toml
entity/src/: chapter.rs  internal_rules.rs  lib.rs
lib/: reglito.ex  reglito_web.ex
lib/reglito/: answer_form.ex  application.ex  chapters.ex  chapters_data.json  mailer.ex  question.ex  release.ex  repo.ex  template.ex
lib/reglito/chapters/: chapter.ex  chapters.ex  section.ex
lib/reglito/internal_regulations/: internal_regulation.ex
lib/reglito/json/: chapters_data.json  chapters_description.json
lib/reglito/options/: option.ex
lib/reglito/questions/: balance_retributions_questions.ex  cooperative_questions.ex  licenses_questions.ex  question.ex  (+5 more)
lib/reglito_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240222_230231_seed_options.rs
priv/plts/: project.plt.hash
priv/repo/: seeds.exs
server/: Cargo.toml  hello.docx  reglamento_interno.docx
server/src/: main.rs
server/src/handlers/: generator.rs  index.rs  initialize_internal_rules.rs  mod.rs  select_chapters.rs
server/templates/: index.html  select_chapters.html
src/: main.rs
src/handlers/: initialize_internal_rules.rs
templates/: index.html
test/: test_helper.exs
test/reglito/: chapters_test.exs
test/support/: conn_case.ex  data_case.ex
(+45 files in other folders)
