[package]
name = "generador-de-reglamento-interno"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.68", features = ["Event", "EventTarget", "HtmlInputElement", "HtmlBodyElement", "KeyboardEvent"] }
yew = { version = "0.21.0", features = ["csr"] }
