[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
askama = "0.12.1"
axum = "0.7.4"
tokio = { version = "1.28", features = ["full"] }
tower-livereload = "=0.9.2"
serde = { version = "1", features = ["derive"] }
entity = { path = "../entity" }
migration = { path = "../migration" }
sea-orm = { features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
], workspace = true }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
